added edit functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "editor.formatOnSave": true,
   "typescript.format.semicolons": "insert",
-  "javascript.format.semicolons": "insert"
+  "javascript.format.semicolons": "insert",
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true
 }
